Fix TOS Logo alignment

--- a/src/stylus/tos.styl
+++ b/src/stylus/tos.styl
@@ -4,10 +4,14 @@
 	font-family: 'Proxima Nova Light';
 	font-weight: normal;
 	color: #fff;
-}
 
-.tos header {
-	text-align: center;
+	header {
+		text-align: center;
+	}
+
+	.logo-link {
+		display: inline;
+	}
 }
 
 .tos-container {
